--- a/coaches/valorant.html
+++ b/coaches/valorant.html
@@ -148,7 +148,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r1.jpg" alt="Ryan T." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player3.jpg" alt="Ryan T." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Ryan T.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Alex 'Viper' Chen broke down my aim mechanics and gave me drills that boosted my headshot accuracy. From Gold to Immortal in two months—his coaching was worth every penny!"</p>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r2.jpg" alt="Emily S." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player2.jpeg" alt="Emily S." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Emily S.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Xhing 'Neon' Lee's map control lessons were a revelation. Her strategies helped me coordinate with my team, leading us to a local tournament win!"</p>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r3.jpg" alt="Jason L." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player1.jpeg" alt="Jason L." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Jason L.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Mike 'Sova' Tran's utility coaching transformed my Sova gameplay. His lineups and game sense tips made me the backbone of my squad."</p>
