--- a/products/index.html
+++ b/products/index.html
@@ -91,7 +91,7 @@
             <div id="productsGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
                 <!-- Skins -->
                 <div class="product-card skins bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/valorant-phantom-skin.jpg" alt="Valorant Phantom Skin" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/vskin.jpeg" alt="Valorant Phantom Skin" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Valorant Phantom Elderflame</h3>
                         <p class="text-gray-400 mb-4">Premium animated skin with unique effects</p>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="product-card skins bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/cs2-ak47-skin.jpg" alt="CS2 AK-47 Skin" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/csskin.webp" alt="CS2 AK-47 Skin" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">CS2 AK-47 Redline</h3>
                         <p class="text-gray-400 mb-4">Classic red design with minimal wear</p>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="product-card skins bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/lol-champion-skin.jpg" alt="League of Legends Skin" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/lolskin.jpg" alt="League of Legends Skin" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">LoL Yasuo Spirit Blossom</h3>
                         <p class="text-gray-400 mb-4">Legendary skin with new animations</p>
@@ -134,7 +134,7 @@
 
                 <!-- Mods -->
                 <div class="product-card mods bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/crosshair-mod.jpg" alt="Crosshair Modification" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/pack.jpeg" alt="Crosshair Modification" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Pro Crosshair Pack</h3>
                         <p class="text-gray-400 mb-4">Professional crosshair configurations</p>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="product-card mods bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/hud-mod.jpg" alt="HUD Modification" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/hudpack.jpg" alt="HUD Modification" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Enhanced HUD Pack</h3>
                         <p class="text-gray-400 mb-4">Improved UI elements for better gameplay</p>
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="product-card mods bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/sound-mod.jpg" alt="Sound Modification" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/audio.jpg" alt="Sound Modification" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Audio Enhancement Mod</h3>
                         <p class="text-gray-400 mb-4">Improved sound effects and clarity</p>
@@ -177,7 +177,7 @@
 
                 <!-- Trading Cards -->
                 <div class="product-card cards bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/valorant-cards.jpg" alt="Valorant Trading Cards" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/agent.jpg" alt="Valorant Trading Cards" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Valorant Agent Cards</h3>
                         <p class="text-gray-400 mb-4">Collectible cards featuring all agents</p>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="product-card cards bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/cs2-cards.jpg" alt="CS2 Trading Cards" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/cssk.webp" alt="CS2 Trading Cards" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">CS2 Weapon Cards</h3>
                         <p class="text-gray-400 mb-4">Rare weapon collection cards</p>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="product-card cards bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/lol-cards.jpg" alt="League of Legends Cards" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/cardllol.jpg" alt="League of Legends Cards" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">LoL Champion Cards</h3>
                         <p class="text-gray-400 mb-4">Complete champion collection set</p>
@@ -220,7 +220,7 @@
 
                 <!-- Additional Products -->
                 <div class="product-card skins bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/apex-wraith-skin.jpg" alt="Apex Legends Wraith Skin" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/apex.webp" alt="Apex Legends Wraith Skin" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Apex Wraith Voidwalker</h3>
                         <p class="text-gray-400 mb-4">Exclusive legendary skin</p>
@@ -234,7 +234,7 @@
                 </div>
 
                 <div class="product-card mods bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/performance-mod.jpg" alt="Performance Optimization Mod" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/boost.jpg" alt="Performance Optimization Mod" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">FPS Boost Pack</h3>
                         <p class="text-gray-400 mb-4">Optimize game performance settings</p>
@@ -248,7 +248,7 @@
                 </div>
 
                 <div class="product-card cards bg-dark-light rounded-xl overflow-hidden hover:transform hover:scale-105 transition-all duration-300">
-                    <img src="/assets/images/products/esports-cards.jpg" alt="Esports Team Cards" class="w-full h-48 object-cover">
+                    <img src="/assets/images/products/team.jpg" alt="Esports Team Cards" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Pro Team Cards</h3>
                         <p class="text-gray-400 mb-4">Professional esports team collection</p>
