--- a/coaches/lol.html
+++ b/coaches/lol.html
@@ -149,7 +149,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r1.jpg" alt="Jordan L." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player1.jpeg" alt="Jordan L." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Jordan L.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Evan 'Zed' Park's mid-lane coaching improved my CS and trading. I climbed to Challenger in three months!"</p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r2.jpg" alt="Sienna M." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player2.jpeg" alt="Sienna M." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Sienna M.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Aria 'Jinx' Kim's ADC lessons taught me perfect kiting. Her positioning tips helped my team win a local tournament!"</p>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r3.jpg" alt="Ethan R." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player3.jpg" alt="Ethan R." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Ethan R.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Liam 'Thresh' Chen's vision control coaching transformed my support play. His ward placements got me to Master!"</p>
