--- a/login/index.html
+++ b/login/index.html
@@ -28,7 +28,7 @@
 </head>
 <body class="bg-dark text-white min-h-screen">
     <!-- Navigation -->
-   <nav class="fixed top-0 left-0 right-0 bg-dark/95 backdrop-blur-sm border-b border-gray-800 z-40">
+    <nav class="fixed top-0 left-0 right-0 bg-dark/95 backdrop-blur-sm border-b border-gray-800 z-40">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center space-x-8">
@@ -67,6 +67,9 @@
             <div class="text-center mb-8">
                 <h1 class="text-3xl font-bold mb-2">Welcome Back</h1>
                 <p class="text-gray-400">Sign in to your Eduflare account</p>
+                <div id="errorAlert" class="hidden mt-4 p-3 bg-red-500/20 border border-red-500 rounded-lg">
+                    <p class="text-red-500 text-sm">Invalid email or password. Please try again.</p>
+                </div>
             </div>
 
             <form id="loginForm" class="space-y-6">
@@ -87,7 +90,7 @@
                         <input type="checkbox" class="rounded border-gray-600 text-primary focus:ring-primary">
                         <span class="ml-2 text-sm text-gray-400">Remember me</span>
                     </label>
-                    <a href="javascript:void(0)" class="text-sm text-primary hover:text-primary/80">Forgot password?</a>
+                    <a href="/contact/" class="text-sm text-primary hover:text-primary/80">Forgot password?</a>
                 </div>
 
                 <button type="submit" 
@@ -150,13 +153,41 @@
     </footer>
 
     <script>
+        // Simple client-side hashing function (for demo purposes)
+        function simpleHash(str) {
+            let hash = 0;
+            for (let i = 0; i < str.length; i++) {
+                hash = ((hash << 5) - hash) + str.charCodeAt(i);
+                hash |= 0; // Convert to 32-bit integer
+            }
+            return hash.toString();
+        }
+
+        // Form submission
         document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            
-            // Simulate login attempt - always redirect to registration
-            setTimeout(() => {
-                window.location.href = '/register/?message=Please create an account';
-            }, 500);
+
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value;
+            const errorAlert = document.getElementById('errorAlert');
+            const user = JSON.parse(localStorage.getItem('user'));
+
+            // Validate login
+            if (user && user.email === email && user.password === simpleHash(password)) {
+                errorAlert.classList.add('hidden');
+                // Handle redirect
+                const urlParams = new URLSearchParams(window.location.search);
+                const redirect = urlParams.get('redirect');
+                const coach = urlParams.get('coach');
+                const game = urlParams.get('game');
+                if (redirect && coach && game) {
+                    window.location.href = `${redirect}?coach=${encodeURIComponent(coach)}&game=${encodeURIComponent(game)}`;
+                } else {
+                    window.location.href = '/';
+                }
+            } else {
+                errorAlert.classList.remove('hidden');
+            }
         });
     </script>
 </body>
