--- a/coaches/apex.html
+++ b/coaches/apex.html
@@ -257,7 +257,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r1.jpg" alt="Chris M." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/chris.avif" alt="Chris M." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Chris M.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Liam 'Wraith' Carter's movement drills improved my slide-jumps and wall-bounces. I hit Apex Predator after three months of coaching!"</p>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r2.jpg" alt="Mia R." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/Sienna.avif" alt="Mia R." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Mia R.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Sofia 'Valkyrie' Ruiz taught me how to lead rotations. Her strategies helped my squad win a local ALGS qualifier!"</p>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r3.jpg" alt="Jake T." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player2.jpeg" alt="Jake T." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Jake T.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Noah 'Gibraltar' Kim's defensive coaching made me a better anchor. His dome shield tactics saved countless matches."</p>
