--- a/coaches/cs2.html
+++ b/coaches/cs2.html
@@ -257,7 +257,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r1.jpg" alt="Alex P." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/player1.jpeg" alt="Alex P." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Alex P.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Lucas 'Sniper' Berg's aim training turned my AWP shots into kills. I reached Global Elite in just six weeks!"</p>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r2.jpg" alt="Vera K." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/Vera K..jpeg" alt="Vera K." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Vera K.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Elena 'Flash' Novak's smoke lineups were a game-changer. My team now dominates Dust 2 in ranked!"</p>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r3.jpg" alt="Tom R." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/Tom R..avif" alt="Tom R." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Tom R.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Max 'Clutch' Wong taught me how to stay calm in 1v3s. His game sense tips got me to Supreme Master!"</p>
