--- a/coaches/dota2.html
+++ b/coaches/dota2.html
@@ -257,7 +257,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r1.jpg" alt="Sam K." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/Sam.webp" alt="Sam K." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Sam K.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Victor 'Shadow' Nguyen's carry coaching improved my last-hitting and farm efficiency. I hit Immortal rank in two months!"</p>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r2.jpg" alt="Anya R." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/Anya.jpg" alt="Anya R." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Anya R.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Lina 'Storm' Petrov's mid-lane strategies taught me how to dominate my lane. Her map awareness tips led my team to a regional win!"</p>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="bg-dark p-6 rounded-lg shadow-lg hover:transform hover:scale-105 transition-all duration-300">
                     <div class="flex items-center mb-4">
-                        <img src="/assets/images/reviews/r3.jpg" alt="Leo M." class="w-12 h-12 rounded-full mr-4 object-cover">
+                        <img src="/assets/images/testimonials/leo.jpeg" alt="Leo M." class="w-12 h-12 rounded-full mr-4 object-cover">
                         <h4 class="text-lg font-semibold text-white">Leo M.</h4>
                     </div>
                     <p class="text-gray-300 italic mb-4">"Mark 'Tide' Lim's support coaching transformed my warding game. His teamfight positioning tips made me a better 5-position!"</p>
