--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
               <span class="text-xl font-bold text-primary">Eduflare</span>
             </div>
             <p class="text-gray-400">
-              Premium gaming coaching platform for serious gamers.
+              We are not an affiliate agency. All products are sold independently through our platform.
             </p>
           </div>
 
