--- a/coaches/valorant.html
+++ b/coaches/valorant.html
@@ -111,7 +111,7 @@
             <p class="text-center text-sm text-gray-400">
               Don't have an account?
               <a
-                href="#"
+                href="javascript:void(0)"
                 onclick="toggleForm('register')"
                 class="text-primary hover:underline"
                 >Register</a
@@ -150,7 +150,7 @@
             <p class="text-center text-sm text-gray-400">
               Already have an account?
               <a
-                href="#"
+                href="javascript:void(0)"
                 onclick="toggleForm('login')"
                 class="text-primary hover:underline"
                 >Login</a
