--- a/contact/index.html
+++ b/contact/index.html
@@ -74,7 +74,7 @@
               Login
             </button>
             <p class="text-center text-sm text-gray-400">
-              Don't have an account? <a href="#" onclick="toggleForm('register')" class="text-primary hover:underline">Register</a>
+              Don't have an account? <a href="javascript:void(0)" onclick="toggleForm('register')" class="text-primary hover:underline">Register</a>
             </p>
           </div>
         </div>
@@ -89,7 +89,7 @@
               Register
             </button>
             <p class="text-center text-sm text-gray-400">
-              Already have an account? <a href="#" onclick="toggleForm('login')" class="text-primary hover:underline">Login</a>
+              Already have an account? <a href="javascript:void(0)" onclick="toggleForm('login')" class="text-primary hover:underline">Login</a>
             </p>
           </div>
         </div>
@@ -285,7 +285,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-dark-light border-t border-gray-800 py-12">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
