--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Cookie Consent Banner -->
     <div
       id="cookieConsent"
-      class="fixed bottom-0 left-0 right-0 bg-dark-light border-t border-gray-700 p-4 z-50 hidden animate-fade-in"
+      class="fixed bottom-0 left-0 right-0  border-t border-gray-700 p-4 z-50 hidden animate-fade-in"
     >
       <div
         class="container mx-auto flex flex-col md:flex-row items-center justify-between"
@@ -69,7 +69,7 @@
       id="authModal"
       class="fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center"
     >
-      <div class="bg-dark-light p-6 rounded-lg w-full max-w-md relative">
+      <div class=" p-6 rounded-lg w-full max-w-md relative">
         <button
           id="closeModal"
           class="absolute top-2 right-2 text-gray-400 hover:text-white"
@@ -113,7 +113,7 @@
             <p class="text-center text-sm text-gray-400">
               Don't have an account?
               <a
-                href="#"
+                href="javascript:void(0)"
                 onclick="toggleForm('register')"
                 class="text-primary hover:underline"
                 >Register</a
@@ -152,7 +152,7 @@
             <p class="text-center text-sm text-gray-400">
               Already have an account?
               <a
-                href="#"
+                href="javascript:void(0)"
                 onclick="toggleForm('login')"
                 class="text-primary hover:underline"
                 >Login</a
@@ -318,7 +318,7 @@
     </section>
 
     <!-- Games Section -->
-    <section id="games" class="py-20 bg-dark-light animate-fade-in">
+    <section id="games" class="py-20  animate-fade-in">
       <div class="container mx-auto px-4">
         <div class="text-center mb-16">
           <h2 class="text-4xl md:text-5xl font-bold mb-4 animate-fade-in">
@@ -444,7 +444,7 @@
     </section>
 
     <!-- Featured Coaches Section -->
-    <section class="py-20 bg-dark-light animate-fade-in">
+    <section class="py-20  animate-fade-in">
       <div class="container mx-auto px-4">
         <div class="text-center mb-16">
           <h2 class="text-4xl md:text-5xl font-bold mb-4 animate-fade-in">
@@ -524,7 +524,7 @@
               <h4 class="text-2xl font-bold mb-2">Evan 'Zed' Park</h4>
               <p class="text-md text-gray-400 mb-2">LoL Specialist</p>
               <p class="text-gray-300 mb-4">
-                Challenger-ranked mid-laner, expert in laning and roaming.
+                Challenger-ranked mid-laner and expert in laning and roaming.
               </p>
               <div class="flex justify-center space-x-4 mb-4">
                 <span class="text-gray-300 font-semibold">1-hour: $30</span>
@@ -579,7 +579,7 @@
               <h4 class="text-2xl font-bold mb-2">Liam 'Wraith' Carter</h4>
               <p class="text-md text-gray-400 mb-2">Apex Legends Specialist</p>
               <p class="text-gray-300 mb-4">
-                Apex Predator with expertise in movement and positioning.
+                Apex Predator with expertise in movement, control and positioning.
               </p>
               <div class="flex justify-center space-x-4 mb-4">
                 <span class="text-gray-300 font-semibold">1-hour: $30</span>
@@ -638,7 +638,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div
-            class="bg-dark-light p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
+            class=" p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
           >
             <div class="flex items-center mb-4">
               <img
@@ -658,7 +658,7 @@
           </div>
 
           <div
-            class="bg-dark-light p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
+            class=" p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
           >
             <div class="flex items-center mb-4">
               <img
@@ -678,7 +678,7 @@
           </div>
 
           <div
-            class="bg-dark-light p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
+            class=" p-6 rounded-xl transform transition-all duration-300 hover:scale-105"
           >
             <div class="flex items-center mb-4">
               <img
